--- a/linkScripts/d3plus/graph1.html
+++ b/linkScripts/d3plus/graph1.html
@@ -3,13 +3,14 @@
 
 <!-- load D3plus with all dependencies -->
 <script src="js/d3plus.full.min.js"></script>
+<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.5.min.js" type="text/javascript"></script>
 
 <!-- create container element for visualization -->
 <div id="viz"></div>
 
 <script>
 
-$.getJSON("/home/ubuntu/output/findMenusOut.json", function(json) {
+$.getJSON("..\..\output\findMenusOut.json", function(json) {
   data = json,
   success = function(data){
     d3plus.viz()
